// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a page with entity 1`] = `
"<!--lit-part /KZqpgKMp6U=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part-->Us<!--/lit-part--></span
        >
      </h1>
      <!--lit-part BboTokvP/FE=--><nav>
      <a href="/">Home</a> | <a href="/about">About</a> |
      <a href="/blog">Blog</a>
    </nav><!--/lit-part--><?><!--/lit-part-->"
`;

exports[`should render a page with metadata 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <title>About</title>
  <meta name="description" content="About page">
  <link rel="stylesheet" href="./style.css">
</head>
<body>
  <div id="root"><!--lit-part /KZqpgKMp6U=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part--><!--/lit-part--></span
        >
      </h1>
      <!--lit-part BboTokvP/FE=--><nav>
      <a href="/">Home</a> | <a href="/about">About</a> |
      <a href="/blog">Blog</a>
    </nav><!--/lit-part--><?><!--/lit-part--></div>

  <script type="module" src="/main.js"></script>
  <script type="module" src="./ga.js"></script>
</body>
</html>"
`;

exports[`should render a page with pre-fetched data 1`] = `
"<!--lit-part eP0n7ioVzug=--><h1><!--lit-part-->Antony<!--/lit-part-->'s Blog</h1>
      <!--lit-part BboTokvP/FE=--><nav>
      <a href="/">Home</a> | <a href="/about">About</a> |
      <a href="/blog">Blog</a>
    </nav><!--/lit-part-->
      <ul>
        <!--lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2022-07-30_the_joruney_begins"><!--lit-part-->2022-07-30<!--/lit-part--> - <!--lit-part-->The Journey Begins<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2022-08-22_entity_store"><!--lit-part-->2022-08-22<!--/lit-part--> - <!--lit-part-->An Entity-Based Store<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2023-08-28_game_ai_algorithms"><!--lit-part-->2023-08-28<!--/lit-part--> - <!--lit-part-->Game AI Algorithms<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2023-11-11_canvas"><!--lit-part-->2023-11-11<!--/lit-part--> - <!--lit-part-->Canvas<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2024-05-28_collision_detection"><!--lit-part-->2024-05-28<!--/lit-part--> - <!--lit-part-->Collision Detection<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-02-14_coding_is_coping"><!--lit-part-->2025-02-14<!--/lit-part--> - <!--lit-part-->Coding Is Coping<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-07-24_lets_talk"><!--lit-part-->2025-07-24<!--/lit-part--> - <!--lit-part-->Let&#39;s Talk<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-10-05_coding_spree"><!--lit-part-->2025-10-05<!--/lit-part--> - <!--lit-part-->Coding Spree<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-10-11_not_only_games"><!--lit-part-->2025-10-11<!--/lit-part--> - <!--lit-part-->Not Only Games<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-11-12_not_only_react"><!--lit-part-->2025-11-12<!--/lit-part--> - <!--lit-part-->Not Only React<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-12-20_inglorious_web"><!--lit-part-->2025-12-20<!--/lit-part--> - <!--lit-part-->Inglorious Web<!--/lit-part--></a>
            </li><!--/lit-part--><!--lit-part o9clfAH/ixU=--><li>
              <!--lit-node 1--><a href="/posts/2025-12-31_inglorious_ssx"><!--lit-part-->2025-12-31<!--/lit-part--> - <!--lit-part-->Inglorious SSX<!--/lit-part--></a>
            </li><!--/lit-part--><!--/lit-part-->
      </ul><!--/lit-part-->"
`;

exports[`should render a static page fragment 1`] = `
"<!--lit-part /KZqpgKMp6U=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part--><!--/lit-part--></span
        >
      </h1>
      <!--lit-part BboTokvP/FE=--><nav>
      <a href="/">Home</a> | <a href="/about">About</a> |
      <a href="/blog">Blog</a>
    </nav><!--/lit-part--><?><!--/lit-part-->"
`;
